--- a/client/src/modules/home/lms-theme.css
+++ b/client/src/modules/home/lms-theme.css
@@ -526,8 +526,4 @@ a.sidebar-nav__link {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
-
-  .portfolio-item--offset {
-    margin-top: 0;
-  }
 }
